--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /.metadata/
-
+.classpath
+.project
 # Created by https://www.toptal.com/developers/gitignore/api/windows,java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,java,eclipse
 
